[package]
name = "nettls"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "capi/build.rs"

[dependencies]
afbv4 = { optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json={ version= "1.0"}

#[patch.crates-io]
#afbv4 = { git= "https://github.com/redpesk-common/afb-librust", branch="master" }
#afbv4 = { path = "../afb-librust" }

[build-dependencies]
bindgen    = ">=0.6"
cc = "1"

[lib]
name = "nettls"
crate-type = ["lib"]
path = "src/lib.rs"
