[package]
name = "nettls"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "capi/build.rs"

[dependencies]
#uncomment the "afbv4" line if you want to use "afbv4" as an external dependencies (for development purpose.)
# You can activate this external dependency with the feature "afbv4" like :"cargo build --features afbv4"
#afbv4 = { git = "https://github.com/redpesk-common/afb-librust", version = "0.2.0", optional = true }
#serde = { version = "1.0", features = ["derive"] }
#serde_json={ version= "1.0"}

[build-dependencies]
bindgen    = ">=0.6"
cc = "1"

[lib]
name = "nettls"
crate-type = ["lib"]
path = "src/lib.rs"
